feat(classes): implement ClientService and ClientController classes